Update min_beg.tex, min_ubeg.tex, and 9 more files...

--- a/fig/tikz/min_beg.tex
+++ b/fig/tikz/min_beg.tex
@@ -30,6 +30,6 @@
 %
 \end{axis}
 \end{tikzpicture}
-\caption{En begrænset løsningsmængde, markeret med gråblåt, afgrænset af lineære betingelser.}
+\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser.}
 \label{fig:min_beg}
 \end{figure}
