--- a/fig/tikz/optimering/opti_loes.tex
+++ b/fig/tikz/optimering/opti_loes.tex
@@ -34,14 +34,14 @@
 %
 %
 %	
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
-\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
-\addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
+%\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{-x};
+%\addplot[domain=-1:6, samples=2, color=black, dotted, thick]{2-x};
+%\addplot[domain=0:6, samples=2, color=black, dotted, thick]{4-x};
 \addplot[mark=*] coordinates {(2,2)};
 \end{axis}
-\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
+%\draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
-\caption{Grafisk illustration med én entydig løsning til problemet i \ref{eks:min_loes}, hvor løsningsmængden er markeret med blå.}
+\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser.}
 %
-\label{fig:opti_loes}
+\label{fig:julieerikkedum}
 \end{figure}
