--- a/fig/tikz/optimering/opti_loes2.tex
+++ b/fig/tikz/optimering/opti_loes2.tex
@@ -42,7 +42,7 @@
 \end{axis}
 \draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
-\caption{Grafisk illustration med uendeligt antal løsninger til problemet i \ref{eks:min_loes}.}
+\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser, med uendeligt antal løsninger til problemet.}
 %
 \label{fig:opti_loes2}
 \end{figure}
