--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -3,7 +3,8 @@
 %
 \subsection{Invertibilitet af funktioner}
 %
-En to tresko - indlednende tekst.
+% 
+Ligeså kan funktioner også være invertible, hvis den er \textit{injektiv}.
 %
 \begin{defn}{}{}
 En funktion $f:\R^n \rightarrow \R^m$ siges at være \textbf{surjektiv}, hvis dens værdimængde er hele $\R^m$, tilsvarende at alle vektorer i $\R^m$ er en afbildning af mindst én vektor i $\R^n$.
@@ -11,6 +12,10 @@ Funktionen siges at være \textbf{injektiv}, hvis hver entydig vektor i $\R^n$ h
 Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijektiv}.
 \end{defn}
 \noindent
+%
+Illustrationen på figur \ref{fig:afbild}, er dermed ikke injektion, eftersom der til hvert $y$ ikke kun er et $x$. 
+%
+% DER MANGLER ALTSÅ NOGET HER ??
 %
 Bemærk, at
 $$f^{-1} \neq \frac{1}{f},$$
