--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -2,7 +2,7 @@
 %
 Lineær programmering er en problemstilling, hvor det ønskes at optimere et problem bestående af en lineær funktion og \textit{lineære betingelser}.
 Funktionen, som optimeres, kaldes \textit{objektfunktionen}.
-Objektfunktionen kan enten optimeres for maksimum eller minimum og er begrænset af de lineære betingelser.
+Objektfunktionen kan enten optimeres for maksimum eller minimum, og er begrænset af de lineære betingelser.
 Findes et maksimum eller minimum inden for begrænsningerne, kaldes dette for problemets \textit{optimale værdi}.
 \\\\
 %
@@ -40,7 +40,7 @@ Betragt minimumsproblemet
 \end{array}
 \end{align*}
 %
-På figur \ref{fig:min_beg} kan løsningsområdet, markeret med gråblå, for minimumsproblemet ses.
+På figur \ref{fig:min_beg} kan løsningsmængden, markeret med blå, for minimumsproblemet ses.
 %
 \input{fig/tikz/min_beg}
 \noindent
