--- a/fig/tikz/min_ubeg.tex
+++ b/fig/tikz/min_ubeg.tex
@@ -23,6 +23,6 @@
 
 \end{axis}
 \end{tikzpicture}
-\caption{En ubegrænset løsningsmængde, markeret med gråblåt, afgrænset af lineære betingelser.}
+\caption{En ubegrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser.}
 \label{fig:min_ubeg}
 \end{figure}
