--- a/fig/tikz/optimering/opti_loes4.tex
+++ b/fig/tikz/optimering/opti_loes4.tex
@@ -50,7 +50,7 @@
 \end{axis}
 \draw[thick,->] (1.4,1.2) -- (2.75,2.35) node[above right] {$\mathbf{v}$};
 \end{tikzpicture}
-\caption{Grafisk illustration, hvor den optimale løsning er $\infty$ til problemet i \ref{eks:min_loes}.}
+\caption{En begrænset løsningsmængde, markeret med blå, afgrænset af lineære betingelser, hvor den optimale løsning er $\infty$ til problemet.}
 %
 \label{fig:opti_loes4}
 \end{figure}
