--- a/incl/main/linear_optimeringsproblemer/dualitet.tex
+++ b/incl/main/linear_optimeringsproblemer/dualitet.tex
@@ -48,7 +48,7 @@ Vil således have:
 
 \begin{align*}
 \begin{array}{lrll}
-\text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
+\text{Minimer}		&\textbf{p}^T\textbf{b}	&			&\\
 \text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
 					&p_i					&\leq 0,	&i \in M_2,\\
 					&p_i					&\text{fri},	&i \in M_3,\\
@@ -63,12 +63,13 @@ som sit dualproblem.
 \\\\
 %
 Det sker således at der for hver begrænsning i det oprindelige problem indføres en variable i dualproblemet, tilsvarende indføres der en begrænsning for hver variable. 
-Derudover skiftes som nævnt i definitionen fra et maksimerings til minimeringsproblem. 
-Dette kan opsummeres i følgende tabel: \\
+Derudover skiftes som nævnt i definitionen fra et maksimums til minimumsproblem.
+I tabel \ref{julieerfantalastiska} ses en oversigt over dualproblemer.\\
+%
 \begin{table}[H]
 \begin{center}
 \begin{tabular}{llll}
-Oprindelige  & maksimer   & minimer    & Dual         \\
+Oprindelige  & Maksimer   & Minimer    & Dual         \\
 \hline
 Variable     & $\geq 0$   & $\geq b_i$ & Begræsninger \\
              & $\leq 0$   & $\leq b_i$ &              \\
@@ -79,21 +80,22 @@ Begræsninger & $\leq c_j$ & $\geq 0$   & Variable     \\
              & $=c_j$     & fri        &             
 \end{tabular}
 \end{center}
+\label{julieerfantalastiska}
 \captionof{table}{Oversigt over egenskaber ved primærproblemet og dettes dual.} 
 %\captionof{tabular}{Fisk finder i på noget.}
 \end{table}
 \noindent
 %
-Dual problemet kan således opstilles som i \ref{dual} \\
+Dualproblemet kan således opstilles som i \ref{dual}. \\
 %
 \begin{eks}
 \label{dual}
 %
-Betragt diæt problemet fra afsnittet om simplexmetoden:
+Betragt diæt problemet:
 %
 \begin{align*}
 \begin{array}{lrrlr}
-\text{Maksimer}		&	\multicolumn{2}{c}{z=5x_1+4x_2}  &\\
+\text{Maksimer}		&	\multicolumn{2}{c}{5x_1+4x_2}  & = & z\\
 \text{begrænset af}	&3x_1& +5x_2			&\leq 	&78,\\
 					&4x_1& + x_2				&\leq	& 36,\\
 					&x_1& , x_2				&\geq	& 0.
@@ -105,38 +107,22 @@ Dualproblemet vil således have denne form:
 	% Julie: Tænker v? var det ikke det du skrev i den forrige?
 \begin{align*}
 \begin{array}{lrrlr}
-\text{Minimer}		&	\multicolumn{2}{c}{z=78p_1+36p_2}  &\\
+\text{Minimer}		&	\multicolumn{2}{c}{78p_1+36p_2}  & =  & z\\
 \text{begrænset af}	&3p_1& +4p_2			&\geq 	&5,\\
 					&5p_1& + p_2				&\geq	& 4,\\
 					&p_1& , p_2				&\geq	& 0.
 \end{array}
 \end{align*}
-Hvor problemet her istedet er at minimere indholdet af sukker og kulhydrater begrænset af forholdet mellem to typer slik i en slikpose.
-%?? Julie skal have lidt mere forklaring af dine begrænsninger for at komme i mål her.
+% 
+I afsnit \ref{coronaaaaaaaaaaa}, omkring simplex, vil dette eksempel blive belyst. Dualproblemet vil istedet minimere indholdet af sukker og kulhydrater begrænset af forholdet mellem to typer slik i en slikpose.
 %
-%Løses dette ved hjælp af simplex-algoritmen opnås følgende tabel:
-%\begin{align*}
-%\begin{blockarray}{cccccc}
-%p_1 & p_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
-%\begin{block}{[cc|ccc|c]}
-%3 & 4 & 1 & 0 & 0 & 5 \\
-%5 & 1 & 0 & 1 & 0 & 4 \\
-%\cline{1-6}
-%78 & 36 & 0 & 0 & 1 & 0\\
-%\end{block}
-%\end{blockarray}
-%\end{align*}
-%skal have lidt hjælp til at omskrive problemet til standardform simplex(det er bare fortegn jeg er i tvivl om, har et program der udføre algoritmen, så er good to go bagefter)
-%
-%her skal løst simplex smides ind
-%
-%Som det fremgår findes minimum i samme punkt:
-%$z=78$ hvor $p_1$ og $p_2$ slackvariable $s_1=6$ og $s_2=12$
 %
 \end{eks}
-%hvis nedenstående skal med skal simplex udføres på tabellen
+%
 %Som det fremgår i eksemplet har løsningen på dualproblemet samme optimale løsning, hvor slackvariable her er løsningen på det oprindelige problem.
-Det gælder endvidere at der fra dualproblemet kan vendes tilbage til det oprindelige problem hvilket udtrykkes ved følgende sætning:
+%
+Det gælder endvidere at der fra dualproblemet kan vendes tilbage til det oprindelige problem, hvilket udtrykkes ved følgende \ref{thm:dualitetsaet}.
+%
 \begin{thm}{}{dualitetsaet}
 Hvis dualproblemet omdannes til et ækvivalent minimumsproblem og dualproblemet af dette dannes, opnås det oprindelige problem.
 \end{thm}
@@ -144,7 +130,7 @@ Hvis dualproblemet omdannes til et ækvivalent minimumsproblem og dualproblemet 
 Betragt problemet:
 \begin{align*}
 \begin{array}{lrll}
-\text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
+\text{Minimer}		&\textbf{p}^T\textbf{b}	&			&\\
 \text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
 					&p_i					&\leq 0,	&i \in M_2,\\
 					&p_i					&\text{fri},	&i \in M_3,\\
@@ -167,7 +153,7 @@ og dets dualproblem:
 Dualproblemet omdannes til et ækvivalent minimumsproblem:
 \begin{align*}
 \begin{array}{lrll}
-\text{minimer}		&-\textbf{c}^T\textbf{x}	&			&\\
+\text{Minimer}		&-\textbf{c}^T\textbf{x}	&			&\\
 \text{begrænset af}	&-\textbf{a}_i^T\textbf{x}	&\leq -b_i,	&i \in M_1,\\
 					&-\textbf{a}_i^T\textbf{x}	&\geq -b_i,	&i \in M_2,\\
 					&-\textbf{a}_i^T\textbf{x}	& = -b_i,	&i \in M_3,\\
@@ -178,7 +164,7 @@ Dualproblemet omdannes til et ækvivalent minimumsproblem:
 Dualen til dette problem findes nu:
 \begin{align*}
 \begin{array}{lrll}
-\text{maksimer}		&-\textbf{p}^T\textbf{b}	&			&\\
+\text{Maksimer}		&-\textbf{p}^T\textbf{b}	&			&\\
 \text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
 					&p_i					&\leq 0,	&i \in M_2,\\
 					&p_i					&\text{fri},	&i \in M_3,\\
@@ -187,10 +173,12 @@ Dualen til dette problem findes nu:
 					&-\textbf{p}^T\textbf{A}_j	& = -b_i,	&i \in N_3,
 \end{array}
 \end{align*}
-Hvilket har et ækvivalent minimumsproblem:
+%
+hvilket har et ækvivalent minimumsproblem:
+%
 \begin{align*}
 \begin{array}{lrll}
-\text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
+\text{Minimer}		&\textbf{p}^T\textbf{b}	&			&\\
 \text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
 					&p_i					&\leq 0,	&i \in M_2,\\
 					&p_i					&\text{fri},	&i \in M_3,\\
@@ -199,6 +187,9 @@ Hvilket har et ækvivalent minimumsproblem:
 					&\textbf{p}^T\textbf{A}_j	& = b_i,	&i \in N_3,
 \end{array}
 \end{align*}
+%
+hvilket er identisk med det oprindelige problem. 
+%
 \end{proof}
 %
 %42 min https://youtu.be/0TRxEvMRE7s definition
