Update konveks.tex, konveks_eks_r2.tex, and 4 more files...

--- a/fig/tikz/geometri/konveks.tex
+++ b/fig/tikz/geometri/konveks.tex
@@ -44,14 +44,14 @@
 % Blå figur
 \draw[thick,-] (0.8,0.85,1.2) -- (1.1,0.85,1.2);
 %
-\filldraw[black] (0.8,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.1,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (0.8,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{u}$};
+\filldraw[black] (1.1,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{v}$};
 %
 % Rød figur 
 \draw[thick,-] (1.6,0.85,1.2) -- (1.9,0.85,1.2);
 %
-\filldraw[black] (1.6,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.9,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{y}$};
+\filldraw[black] (1.6,0.85,1.2) circle (0.2pt) node[left] {$\mathbf{u}$};
+\filldraw[black] (1.9,0.85,1.2) circle (0.2pt) node[right] {$\mathbf{v}$};
 %
 %
 \end{tikzpicture}
