--- a/fig/tikz/geometri/konveks_eks_r2.tex
+++ b/fig/tikz/geometri/konveks_eks_r2.tex
@@ -23,9 +23,9 @@
 %
 % Punkter og linje 
 % -------------------------------------------------------
-\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{y}$};
-\filldraw[black] (1.1,1,1.2) circle (0pt) node[right] {$\frac{1}{2} \mathbf{x}+\frac{1}{2} \mathbf{y}$};
+\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{u}$};
+\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{v}$};
+\filldraw[black] (1.1,1,1.2) circle (0pt) node[right] {$\frac{1}{2} \mathbf{u}+\frac{1}{2} \mathbf{v}$};
 %
 %% Koordinatssystem
 %% ------------------------------------------------------
@@ -36,7 +36,7 @@
 %%
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}$ og $ \mathbf{y}$, samt den konvekse kombination af dem, hvor $\lambda_x = \lambda_y = \frac{1}{2}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{u}$ og $ \mathbf{v}$, samt den konvekse kombination af dem, hvor $\lambda_{\textbf{u}} = \lambda_{\textbf{v}} = \frac{1}{2}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neej2}
 \end{center}
 %
