--- a/fig/tikz/geometri/konveks_eks_r3.tex
+++ b/fig/tikz/geometri/konveks_eks_r3.tex
@@ -23,9 +23,9 @@
 %
 % Punkter og linje 
 % -------------------------------------------------------
-\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{x}$};
-\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{y}$};
-\filldraw[black] (1.4,1,1.2) circle (0pt) node[right] {$\mathbf{z}$};
+\filldraw[black] (0.95,1,1.2) circle (0pt) node[left] {$\mathbf{u}$};
+\filldraw[black] (1.7,1,1.2) circle (0pt) node[right] {$\mathbf{v}$};
+\filldraw[black] (1.4,1,1.2) circle (0pt) node[right] {$\mathbf{w}$};
 %
 % Planet - Hyperplanet
 % -------------------------------------------------------
@@ -48,7 +48,7 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{x}$, $ \mathbf{y}$ og $ \mathbf{z}$ i $\R^3$, og det konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{u}$, $ \mathbf{v}$ og $ \mathbf{w}$ i $\R^3$, og det konvekse hylster af vektorerne, der er markeret med blå.}
   \label{fig:neeej}
 \end{center}
 %
