--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -113,12 +113,12 @@ Hyperplanerne på figur \ref{fig:nej3} danner dermed polygonen, og fællesmængd
 Lad $\mathbf{a}$ være en vektor i $\R^n$, hvor 
 $\mathbf{a} \neq \mathbf{0}.$
 For hyperplanet 
-$\{x \in \R^n \mid \mathbf{a}^T \mathbf{x}=b\},$ 
+$\{\textbf{x} \in \R^n \mid \mathbf{a}^T \mathbf{x}=b\},$ 
 vil $\mathbf{a}$ være ortogonal med hyperplanet.
 \end{thm}
 %Ovenstående giver stadig ikke mening? 
 \begin{proof}
-Lad $\mathbf{x}$ og $\mathbf{y}$ tilhøre det samme hyperplan. 
-Så er $\mathbf{a}^Tx=\mathbf{a}^Ty.$
-Dermed er $\mathbf{a}^T(x-y)=0$, og så er $\mathbf{a}$ ortogonal til alle vektorer i hyperplanet. 
+Lad $\mathbf{u}$ og $\mathbf{v}$ tilhøre det samme hyperplan. 
+Så er $\mathbf{a}^T\textbf{u}=\mathbf{a}^T\textbf{v}.$
+Dermed er $\mathbf{a}^T(\textbf{u}-\textbf{v})=0$, og så er $\mathbf{a}$ ortogonal til alle vektorer i hyperplanet. 
 \end{proof}
