--- a/incl/main/grafisk_losning/ekstrema_punkter.tex
+++ b/incl/main/grafisk_losning/ekstrema_punkter.tex
@@ -6,14 +6,14 @@ Der er derfor behov for måder at definere disse hjørner på.
 %
 \begin{defn}{}{ekstrema}
 Lad $\mathcal{P}$ være en polyede. 
-En vektor $\mathbf{x} \in \mathcal{P}$ kaldes et \textbf{ekstremumspunkt} i $\mathcal{P}$, hvis der ikke eksisterer to vektorer $\mathbf{y},\mathbf{z} \in \mathcal{P}$, $\mathbf{y} \land \mathbf{z} \neq \mathbf{x}$, 
-samt en skalar $\lambda \in [0,1]$, hvorom det gælder, at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda)\textbf{z}$.
+En vektor $\mathbf{u} \in \mathcal{P}$ kaldes et \textbf{ekstremumspunkt} i $\mathcal{P}$, hvis der ikke eksisterer to vektorer $\mathbf{v},\mathbf{w} \in \mathcal{P}$, $\mathbf{v} \land \mathbf{w} \neq \mathbf{u}$, 
+samt en skalar $\lambda \in [0,1]$, hvorom det gælder, at $\mathbf{u}=\lambda\mathbf{v}+(1-\lambda)\textbf{w}$.
 \end{defn}
 \noindent
 %
 %
-Et hjørne kan beskrives ud fra denne definition, idet der, såfremt $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$, og alle vektorene findes i $P$, gælder, at $\mathbf{x}$ er en konveks kombination af $\mathbf{y}$ og $\mathbf{z}$.
-Hvis $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \textbf{z}$ og $\mathbf{x}$ er et ekstremumspunkt, må det derfor gælde, at $\mathbf{y}\notin P$ eller $\mathbf{z}\notin P$ eller $\mathbf{x}=\mathbf{z}$ eller $\mathbf{x}=\mathbf{y}$. 
+Et hjørne kan beskrives ud fra denne definition, idet der, såfremt $\mathbf{u}=\lambda\mathbf{v}+(1-\lambda) \mathbf{w}$, og alle vektorene findes i $P$, gælder, at $\mathbf{u}$ er en konveks kombination af $\mathbf{v}$ og $\mathbf{w}$.
+Hvis $\mathbf{u}=\lambda\mathbf{v}+(1-\lambda) \textbf{w}$ og $\mathbf{u}$ er et ekstremumspunkt, må det derfor gælde, at $\mathbf{v}\notin P$ eller $\mathbf{w}\notin P$ eller $\mathbf{u}=\mathbf{w}$ eller $\mathbf{u}=\mathbf{v}$.
 Det skal her nævnes, at denne definition er strengt geometrisk. 
 % Kun gælder som geometrisk definition gælder ikke som algebrarisk definition xD
 På figur \ref{fig:ekstrema} ses en polyede $\mathcal{P}$, hvor $\textbf{x}$ er et ekstremumspunkt, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$ sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$. Vektor $\textbf{w}$ er i modsætning ikke et ekstremumspunkt, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda)u$.
@@ -25,7 +25,7 @@ En alternativ geometrisk definition relaterer sig til \textit{hjørne punkter}, 
 %
 \begin{defn}{}{hjoerner}
 Lad $\mathcal{P}$ være en polyede. 
-En vektor $\mathbf{x}\in \mathcal{P}$ siges at være et \textbf{hjørne punkt}, hvis der eksisterer en vektor $\mathbf{c}$, hvorom det gælder, at $\mathbf{c}^T\mathbf{x}<\mathbf{c}^T\mathbf{y}$ for alle $\mathbf{y}$, som opfylder $\mathbf{y} \in \mathcal{P}$ samt $\mathbf{y}\neq\mathbf{x}$.
+En vektor $\mathbf{u}\in \mathcal{P}$ siges at være et \textbf{hjørne punkt}, hvis der eksisterer en vektor $\mathbf{c}$, hvorom det gælder, at $\mathbf{c}^T\mathbf{u}<\mathbf{c}^T\mathbf{v}$ for alle $\mathbf{v}$, som opfylder $\mathbf{v} \in \mathcal{P}$ samt $\mathbf{v}\neq\mathbf{u}$.
 \end{defn}
 \noindent
 %
@@ -34,7 +34,6 @@ Vektoren $\textbf{w}$ er i modsætning ikke hjørnepunkt, da hyperplanet rammer 
 %
 \input{fig/tikz/geometri/hjorne}
 \\\\
-%
 %
 Dette kan ligeledes beskrives som, at $\mathbf{x}$ er et hjørne i $\mathcal{P}$, såfremt $\mathcal{P}$ er på den ene side af et hyperplan, der skærer $\mathcal{P}$ i $\mathbf{x}$. 
 Jævnfør \ref{defn:ekstrema} har dette hyperplan ligningen $y \mid \mathbf{c}^T\mathbf{x}=\mathbf{c}^T\mathbf{y}.$
