Update 2.tex, 21.tex, and 21b.tex

--- a/CSB/EPG2/incl/main/2.tex
+++ b/CSB/EPG2/incl/main/2.tex
@@ -3,10 +3,12 @@
 %
 \begin{color}{AAUblue2}
 %
-fisk
+De første  spørgsmål omhandler teoretiske aspekter af numerisk integration. 
+Derefter kommer nogle computer eksperimenter.
 % 
 \end{color}
+%
 \input{incl/main/21}
-\input{incl/main/21b}
+%\input{incl/main/21b}
 \input{incl/main/22}
 \input{incl/main/23}
