Update 21.tex and 22.tex

--- a/CSB/EPG2/incl/main/22.tex
+++ b/CSB/EPG2/incl/main/22.tex
@@ -3,7 +3,7 @@
 %
 \begin{color}{AAUblue2}
 %
-2. Beskriv den klassiske fjerde ordens Runge-kutta metode (RK4). forklar, at denne metode anvendt på
+Beskriv den klassiske fjerde ordens Runge-kutta metode (RK4). forklar, at denne metode anvendt på
 $$\frac{dy}{dx}=f(x), \phantom{...}y(a)=y_0$$
 til approksimation af y(b), er det samme som Simpsons regel anvendt til approksimation af 
 $$y_0+\int^b_a f(x)dx. $$
