--- a/CSB/EPG2/incl/main/21.tex
+++ b/CSB/EPG2/incl/main/21.tex
@@ -101,7 +101,7 @@ Herefter startes i begyndelsespunktet $x_0$ og man følger langs tangentvektoren
 %
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
-k_2 & = f(x_n + \frac{h}{2} , y_n = + \frac{h}{2} k_1 )  \\
+k_2 & = f \left( x_n + \frac{h}{2} , y_n = + \frac{h}{2} k_1 \right)  \\
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + h k_2 
 \end{align*}
@@ -122,7 +122,7 @@ Herefter startes i begyndelsespunktet $x_0$ og man følger langs tangentvektoren
 %
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
-k_2 & = f(x_n + h , y_n = + h k_1 ) \\
+k_2 & = f( x_n + h , y_n = + h k_1 ) \\
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + \frac{h}{2} (k_1 + k_2 )
 \end{align*}
@@ -143,7 +143,7 @@ Herefter startes i begyndelsespunktet $x_0$ og man følger langs tangentvektoren
 %
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
-k_2 & = f(x_n + \frac{2}{3} h , y_n = + \frac{2}{3} h k_1 ) \\
+k_2 & = f \left( x_n + \frac{2}{3} h , y_n = + \frac{2}{3} h k_1 \right) \\
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + \frac{h}{4} (k_1 + k_2 )
 \end{align*}
